--- a/UngDungThueXe/UngDungThueXe.csproj
+++ b/UngDungThueXe/UngDungThueXe.csproj
@@ -46,8 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UDThueXe.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XeDuLich.cs" />
+    <Compile Include="XeTai.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
